plugins {
	id 'fml-loom' version '0.1.local'
	id 'maven-publish'
}

version = project.version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	mavenLocal()
	maven {
		name = "Spongepowered"
		url = "https://repo.spongepowered.org/repository/maven-public/"
	}
}

loom {
	accessWidenerPath = file("src/main/resources/emi.accesswidener")
	mergedMinecraftJar()
	setFML(new File("libs\\FishModLoader-v3.4.1.jar"))
	mods {
		"EMI" {
			sourceSet sourceSets.main
		}
	}

}

runClient{
	args("--username", "Xy_Lose", "--session", "a.a.a.a", "--width", 854, "--height", 480)
}

dependencies {

	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings loom.fmlMCPMappings()

	implementation files("libs\\fastutil-8.5.12.jar")
	implementation files("libs\\gson-2.10.1.jar")
	implementation files("libs\\PinIn-Lib-1.6.0.jar")
	implementation files("libs\\joml-1.10.5.jar")
	implementation files("libs\\modmenu-10.0.0.jar")
	implementation files(loom.getFML().toPath())
}

processResources {
	inputs.property "version", project.version

	filesMatching("fml.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
}

java {
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

jar {
	from fileTree("$projectDir/extras/")
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}"}
	}
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {

	}
}

allprojects {
	base.archivesName = rootProject.archives_base_name
	ext.mavenVersion = "${rootProject.version}"
//	if (System.getenv("RELEASE") == null) {
//		ext.mavenVersion += "-SNAPSHOT"
//	}
	ext.mavenVersion += "+${rootProject.minecraft_version}"
	version = "${project.ext.mavenVersion}+${project.enabled_platforms}"
	group = rootProject.maven_group
}
